--- a/Sudoku Solver/Sudoku Solver.csproj
+++ b/Sudoku Solver/Sudoku Solver.csproj
@@ -55,6 +55,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Solver.cs" />
+    <Compile Include="SudokuButton.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="SudokuPanel.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
